shaku_derive/tests/ui/provider_parameters.stderr
error: Error when parsing value: Parameters are not allowed in Providers
 --> $DIR/provider_parameters.rs:7:10
  |
7 | #[derive(Provider)]
  |          ^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
